NOTIFICATIONS should be implemented as PageSupplement https://bugs.webkit.org/show_bug.cgi?id=79052

Patch by Hajime Morrita <morrita@chromium.org> on 2012-02-22
Reviewed by Adam Barth.

Source/WebCore:

Turned NotificationController to a PageSupplement.

No new tests. No behavior change.

* notifications/NotificationController.cpp:
(WebCore::NotificationController::clientFrom):
(WebCore):
(WebCore::NotificationController::supplementName):
(WebCore::provideNotification):
* notifications/NotificationController.h:
(NotificationController):
(WebCore::NotificationController::from):
* notifications/NotificationPresenter.h:
(WebCore):
* page/DOMWindow.cpp:
(WebCore::DOMWindow::webkitNotifications):
* page/Page.cpp:
(WebCore::Page::Page):
(WebCore::Page::PageClients::PageClients):
* page/Page.h:
(WebCore):
(PageClients):
(Page):

Source/WebKit/chromium:

* src/WebViewImpl.cpp:
(WebKit::WebViewImpl::WebViewImpl):

Source/WebKit/mac:

* WebView/WebView.mm:
(-[WebView _commonInitializationWithFrameName:groupName:]):

Source/WebKit/qt:

* Api/qwebpage.cpp:
(QWebPagePrivate::QWebPagePrivate):

Canonical link: https://commits.webkit.org/96398@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@108615 268f45cc-cd09-0410-ab3c-d52691b4dbfc